--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,8 @@ project(communal-calculator)
 
 add_executable(${PROJECT_NAME}
   SourceFiles/main.cpp
+  SourceFiles/communal_calculator.h
+  SourceFiles/communal_calculator.cpp
 )
 
 target_include_directories(${PROJECT_NAME} PRIVATE SourceFiles)
