Add Qt6 to cmake build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,24 @@ set(CMAKE_CXX_STANDARD 17)
 
 project(communal-calculator)
 
+# Qt setup ---
+
+set(CMAKE_AUTOMOC ON)
+set(CMAKE_AUTORCC ON)
+set(CMAKE_AUTOUIC ON)
+
+if(NOT DEFINED ENV{QT6_DIR})
+  message(FATAL_ERROR "QT6_DIR was not found")
+endif()
+
+message(STATUS "Using Qt6: \"$ENV{QT6_DIR}\"")
+
+set(CMAKE_PREFIX_PATH ${CMAKE_PREFIX_PATH}$ENV{QT6_DIR})
+
+find_package(Qt6 REQUIRED COMPONENTS Widgets)
+
+# ------------
+
 add_executable(${PROJECT_NAME}
   SourceFiles/main.cpp
   SourceFiles/communal_calculator.h
@@ -12,3 +30,7 @@ add_executable(${PROJECT_NAME}
 
 target_include_directories(${PROJECT_NAME} PRIVATE SourceFiles)
 
+target_link_libraries(
+  ${PROJECT_NAME}
+  Qt6::Widgets
+)
