--- a/cpplint.cfg
+++ b/cpplint.cfg
@@ -1,2 +1,1 @@
-filter=-legal/copyright, -build/c++11, -build/include_subdir
-
+filter=-legal/copyright, -build/c++11, -runtime/int, -runtime/references
