--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,37 @@
 build/
-**/.DS_Store
+.vscode
 CMakeLists.txt.user
+cmake-build*/
+.idea/
 
+# Prerequisites
+*.d
+
+# Compiled Object files
+*.slo
+*.lo
+*.o
+*.obj
+
+# Precompiled Headers
+*.gch
+*.pch
+
+# Compiled Dynamic libraries
+*.so
+*.dylib
+*.dll
+
+# Fortran module files
+*.mod
+*.smod
+
+# Compiled Static libraries
+*.lai
+*.la
+*.a
+*.lib
+
+# Executables
+*.out
+*.app
